2003-08-03  Tim Jenness  <timj@jach.hawaii.edu>

	* Query/Query/SIMBAD.pm: All the functionality of Astro::SIMBAD
	integrated into Astro::Catalog... 

	* Star/Star.pm: Add startype, spectype, longstartype and moreinfo
	needed by SIMBAD query.

2003-08-02  Tim Jenness  <timj@jach.hawaii.edu>

	* Transport/*.pm: Reorganized as part of SkyCat work 

	* Query/Query/*.pm: All Query classes reorganised to make SkyCat
	easier. 

	* Query/Query.pm: Much reorganization to support SkyCat class. 

	* Query/Query/SkyCat.pm: Now forms a query and parses the results
	for an abritrary SkyCat-enabled server. Still not ready for prime
	time.

	* t/4_*.t: All query tests now use helper.pl
	
	* t/helper.pl: Reusable test components now in separate file 

2003-08-01  Tim Jenness  <timj@jach.hawaii.edu>

	* Transport/REST.pm (useragent): Instantiate useragent on demand
	rather than via configure (useful for skycat interface). Separate
	construction of URL from retrieval of URL to allow simpler subclassing.

2003-07-30  Tim Jenness  <timj@jach.hawaii.edu>

	* IO/TST.pm: Add TST format reader. Still has debug.

2003-07-29  Alasdair Allan <aa@astro.ex.ac.uk>

        * Moved Astro::Catalog::BaseQuery to be Astro::Catalog::Query in
          preparation for it be a proper polymorphic factory class for
          generic catalogue queries.
        
        * Moved actualy query sub-classes down a directory level to allow
          for the Query.pm file 
          
        * Added a WebService transport class, probably needs some added
          generalisation, but our sample of web services is still small.
          
        * Added a Sesame.pm class to do CDS Sesame lookups by target name
          using the new WebService transport class. 
                       
2003-07-28  Alasdair Allan <aa@astro.ex.ac.uk>

        * Moved the catalogue query classes to chare a common namespace,
          current classes now inherit from the Astro::Catalog::Transport::REST